--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "jshint": "^2.12.0"
+    "jshint": "^2.12.0",
+    "selenium-webdriver": "^4.0.0-beta.2"
   },
   "name": "js-testing",
   "version": "1.0.0",
@@ -10,6 +11,7 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/register": "^7.13.8",
     "babel-loader": "^8.2.2",
+    "bluebird": "^3.7.2",
     "chai": "^4.3.4",
     "mocha": "^8.3.2",
     "webpack": "^5.26.0",
@@ -19,7 +21,8 @@
   "scripts": {
     "build": "webpack --config webpack.prod.config.js",
     "dev": "webpack serve --config webpack.dev.config.js",
-    "test": "mocha test.js"
+    "test": "mocha test.js",
+    "test-ui": "node test-ui.js"
   },
   "repository": {
     "type": "git",
